--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "djoser>=2.3.3",
     "drf-nested-routers>=0.94.1",
     "pillow>=11.0.0",
+    "pytest>=9.0.1",
+    "pytest-django>=4.11.1",
 ]
 
 [dependency-groups]
